css/styles.css
* {
  margin: 0;
  padding: 0;
  height: 100%;
}

body {
  font-family: 'Roboto', sans-serif;
}

li {
  padding-right: 15px;
  display: inline;
}

/*general styles*/

.spacer {
  padding-top: 100px;
}

.bold {
  font-weight: bold;
}

.no-wrap {
  white-space: nowrap;
}

/*header and nav bar*/

/*top-most nav bar*/

.nav-a {
  text-decoration: none;
  color: white;
  font-size: 10px;
  font-weight: bold;
}

.nav-icon-height {
  height: 20px;
}

#hero-nav-bar {
  height: 40px;
  margin-bottom: 50px;
}

#link-nav-list, #social-media-nav-list {
  display: inline-block;
  list-style-type: none;
  font-size: 1.5em;
  float: right;
  padding-right: 22px;
}

#top-left-logo {
  padding-top: 20px;
  padding-left: 40px;
  width: 129px;
  height: 29px;
  float: left;
}

#hero-image-header {
  background: url('../assets/img/hero-image-sea.jpg');
  background-size: cover;
  background-position: center;
  height: 800px;
  z-index: 0;
}

#hero-content {
  color: white;
  font-size: 2.1em;
  text-align: center;
  z-index: 1;
}

#hero-text-wide {
  font-weight: 100;
  width: 75%;
  max-width: 750px;
  margin: 0 auto;
  height: 126px;
}

#hero-text-thin {
  font-weight: 100;
  display: none;
  width: 309.9px;
  margin: 0 auto;
  height: 140px;
}

#hero-logo-image {
  width: 106px;
  height: 106px;
  margin-top: 20px;
  margin-bottom: 50px;
}

#countdown {
  height: 100px;
  min-width: 800px
}

#countdown-announcement {
  font-weight: 100;
  height: 40px;
  margin-bottom: 70px;
}

.timer {
  width: 100px;
  height: 20px;
  display: inline-block;
  font-size: 50px;
  font-weight: bold;
}

.timer-title {
  font-size: 10px;
  font-weight: 100;
  clear: both;
}

#scroller-image {
  padding-top: 79px;
  height: 60px;
}

@media (max-width: 900px) {

  .timer {
    width: 70px;
  }

  #countdown {
    min-width: 700px;
  }

  #hero-logo-image {
    margin-left: 0px;
  }

  #hero-content {
    font-size: 1.5em;
  }

}

@media (max-width: 700px) {

  #countdown-announcement, #social-media-nav-list, #link-nav-list {
    display: none;
  }

  #countdown {
    min-width: 300px;
  }

  #hero-content {
    font-size: 1.2em;
  }

  #hero-image-header {
    height: 667px;
  }

  #top-left-logo {
    width: 129px;
    height: 29px;
    margin-left: -10px;
    float: inherit;
    padding-left: 0px;
  }

  #hero-text-wide {
    display: none;
  }

  #hero-text-thin {
    display: inherit;
  }

}

/*explore deepsee section*/

#explore-deepsee {
  height: 400px;
  width: 100%;
  color: #297FCA;
  font-weight: 100;
  text-align: center;
}

#explore-deepsee-title {
  font-size: 2em;
  font-weight: 300;
  height: 60px;
  width: 50%;
  margin: 0 auto;
  padding-top: 50px;
  text-align: center;
}

#explore-deepsee-blurb {
  font-size: .7em;
  font-weight: 100;
  line-height: 20px;
  height: 150px;
  width: 50%;
  margin: 0 auto;
}

#small-bar {
  height: 2px;
  width: 106px;
  padding-bottom: 30px;
}

#whitepaper-button {
  font-size: .7em;
  color: white;
  height: 60px;
  width: 300px;
  text-decoration: none;
  background-image: linear-gradient(-180deg, #259BF9 0%, #1A6BAE 100%);
  border-radius: 3px;
  padding: 12px 16px 12px 16px;
}

#whitepaper-button-icon {
  height: 20px;
  width: 20px;
}

@media (max-width: 700px) {

  #explore-deepsee {
    height: 570px;
  }

  #explore-deepsee-blurb {
    padding-bottom: 50px;
    height: 250px;  
  }

  #explore-deepsee-title {
    font-size: 1.3em;
  }

  #small-bar {
    height: 2px;
    width: 106px;
    padding-bottom: 30px;
    padding-top: 10px;
  }

  #whitepaper-button {
    font-size: .7em;
    color: white;
    height: 60px;
    width: 300px;
    text-decoration: none;
    background-image: linear-gradient(-180deg, #259BF9 0%, #1A6BAE 100%);
    border-radius: 3px;
    padding: 12px 16px 12px 16px;
  }

}

/*what do we offer*/

.check-mark {
  height: 40px;
}

.offer-titles {
  height: 30px;
}

.offer-infos {
  font-size: .4em;
  height: 150px;
}

#what-we-offer {
  color: white;
  height: 1000px;
  background-image: linear-gradient(-180deg, #297FCA 0%, #1D5D94 100%);
}

#what-we-offer-title {
  text-align: center;
  padding-bottom: 40px;
  padding-top: 20px;
  height: 50px;
  font-weight: 100; 
  font-size: 2em;
}

#offer-screenshot-container {
  width: 100%;
  height: 300px;
}

#offer-screenshot {
  width: 100%;
  height: auto;
}

#info-box-container {
  text-align: center;
  display: flex;
  flex-direction: row;
  justify-content: center;
  height: 200px;
}

#item1 {
  order: 1;
  height: 100px;
  padding: 20px;
}

#item2 {
  order: 2;
  height: 100px;
  padding: 20px;
}

#item3 {
  order: 3;
  height: 100px;
  padding: 20px;
}

@media (max-width: 700px) {
  #what-we-offer {
    height: 900px;
  }

  #info-box-container {
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 450px;
  }

  #offer-screenshot {
    width: 100%;
    height: 200px;
  }
}

/*features*/

.icon-height {
  height: 40px;
}

.feature-titles {
  height: 30px;
}

.feature-info {
  font-size: .4em;
  height: 90px;
}

#features {
  color: #297FCA;
  height: 700px;
  background-color: white;
}

#features-blurb {
  width: 50%;
  margin: 0 auto;
  padding-top: 50px;
  text-align: center;
  height: 100px;
}

#features-container-row1, #features-container-row2, #features-container-row3 {
  height: 150px;
  display: flex;
  width: 70%;
  margin: 0 auto;
  text-align: center;
}

#feature1, #feature4 {
  order: 1;
  height: 100px;
  padding: 30px;
}

#feature2, #feature5, #feature8 {
  order: 2;
  height: 100px;
  padding: 30px;
}

#feature3, #feature6 {
  order: 3;
  height: 100px;
  padding: 30px;
}

#feature7 {
  order: 1;
  width: 100px;
  padding: 20px;
}

#bottom-feature {
  padding-left: 20px;
}

.feature-big-title {
  height: 40px;
}

@media (max-width: 900px) {

  #features-container-row1 {
    height: 300px;
    display: flex;
    flex-direction: column;
    width: 70%;
    margin: 0 auto;
    text-align: center;
  }

  #features-container-row2, #features-container-row3 {
    height: 300px;
    display: flex;
    flex-direction: column;
    width: 70%;
    margin: 0 auto;
    text-align: center;
    padding-top: 150px;
  }

  #features {
    height: 1400px;
  }

  #feature7 {
    order: 1;
    width: 100%;
  }

  #blue-logo-height {
    padding-top: 30px;
    height: 100px;
    margin: 0 auto;
    margin-left: -35px;
  }

}

@media (max-width: 900px) and (orientation: landscape) { 

  #features-container-row1 {
    height: 300px;
    display: flex;
    flex-direction: column;
    width: 70%;
    margin: 0 auto;
    text-align: center;
  }

  #features-container-row2, #features-container-row3 {
    height: 300px;
    display: flex;
    flex-direction: column;
    width: 70%;
    margin: 0 auto;
    text-align: center;
    padding-top: 150px;
  }

}

/*workflow*/

#workflow {
  background-color: #1E5E96;
  height: 690px;
}

/*members*/

#members {
  height: 1000px;
}

/*contact*/

#contact {
  background-color: #F4F9FD;
  height: 400px;
}

/*footer*/

#footer {
  background-color: #1E5E96;
  height: 100px;
}

